--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-run-command": "0.0.9"
   },
   "dependencies": {
-    "gulp-watch": "^5.0.1"
+    "gulp-watch": "^5.0.1",
+    "natives": "^1.1.6"
   }
 }
