Update gulp + eslint sets

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,9 @@
 {
     "extends": "eslint:recommended",
     "rules": {
-        "quotes": [ 2, "single" ]
+        "no-console": "off",
+        "indent": ["error", 4, { "SwitchCase": 1 }],
+        "linebreak-style": ["error", "unix"],
+        "quotes": ["error", "single"]
     }
 }
