--- a/package.json
+++ b/package.json
@@ -1,38 +1,38 @@
 {
-  "name": "yengin",
-  "version": "2.1.6",
-  "description": "HTML5/canvas JS Library",
-  "main": "yengin.min.js",
-  "scripts": {
-    "preinstall": "npm i gulp -g",
-    "compile": "gulp compile",
-    "lint": "./node_modules/eslint/bin/eslint.js --cache --fix ./test/main.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Yarflam/Yengin.git"
-  },
-  "keywords": [
-    "html5/canvas",
-    "js",
-    "library"
-  ],
-  "author": "Yarflam",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Yarflam/Yengin/issues"
-  },
-  "homepage": "https://github.com/Yarflam/Yengin#readme",
-  "devDependencies": {
-    "eslint": "^5.6.1",
-    "gulp": "^3.9.1",
-    "gulp-rename": "^1.4.0",
-    "gulp-uglify": "^3.0.1",
-    "gulp-run-command": "0.0.9"
-  },
-  "dependencies": {
-    "gulp-watch": "^5.0.1",
-    "natives": "^1.1.6"
-  }
+    "name": "yengin",
+    "version": "2.1.6",
+    "description": "HTML5/canvas JS Library",
+    "main": "yengin.min.js",
+    "scripts": {
+        "preinstall": "npm i gulp -g",
+        "build": "gulp build",
+        "lint": "./node_modules/eslint/bin/eslint.js --cache --fix ./test/main.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Yarflam/Yengin.git"
+    },
+    "keywords": [
+        "html5/canvas",
+        "js",
+        "library"
+    ],
+    "author": "Yarflam",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/Yarflam/Yengin/issues"
+    },
+    "homepage": "https://github.com/Yarflam/Yengin#readme",
+    "devDependencies": {
+        "eslint": "^5.6.1",
+        "gulp": "^4.0.2",
+        "gulp-rename": "^1.4.0",
+        "gulp-run-command": "0.0.9",
+        "gulp-uglify": "^3.0.1"
+    },
+    "dependencies": {
+        "gulp-watch": "^5.0.1",
+        "natives": "^1.1.6"
+    }
 }
