--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
     "name": "yengin",
-    "version": "2.1.6",
-    "description": "HTML5/canvas JS Library",
+    "version": "3.0.0",
+    "description": "JS Libs/Components",
     "main": "yengin.min.js",
     "scripts": {
-        "build": "gulp build",
-        "lint": "./node_modules/eslint/bin/eslint.js --cache --fix ./test/main.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
@@ -13,9 +11,10 @@
         "url": "git+https://github.com/Yarflam/Yengin.git"
     },
     "keywords": [
-        "html5/canvas",
         "js",
-        "library"
+        "next",
+        "components",
+        "libraries"
     ],
     "author": "Yarflam",
     "license": "ISC",
@@ -24,14 +23,7 @@
     },
     "homepage": "https://github.com/Yarflam/Yengin#readme",
     "devDependencies": {
-        "eslint": "^5.6.1",
-        "gulp": "^4.0.2",
-        "gulp-rename": "^1.4.0",
-        "gulp-run-command": "0.0.9",
-        "gulp-uglify": "^3.0.1"
-    },
-    "dependencies": {
-        "gulp-watch": "^5.0.1",
-        "natives": "^1.1.6"
+        "eslint": "^8.23.0",
+        "prettier": "^2.7.1"
     }
 }
